# docs/swagger.yaml
@@ -9,6 +9,106 @@ definitions:
     - email
     - password
     type: object
+  domain.MerchantData:
+    properties:
+      address:
+        type: string
+      coordinate:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: integer
+      name:
+        type: string
+      phone_number:
+        type: string
+      picture:
+        type: string
+      score:
+        type: number
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  domain.MerchantRequest:
+    properties:
+      address:
+        type: string
+      coordinate:
+        type: string
+      created_at:
+        type: string
+      is_active:
+        type: integer
+      name:
+        type: string
+      phone_number:
+        type: string
+      picture:
+        type: string
+      score:
+        type: number
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  domain.OrderData:
+    properties:
+      cancel_reason:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      merchant_id:
+        type: integer
+      notes:
+        type: string
+      order_date:
+        type: string
+      order_no:
+        type: string
+      order_status_id:
+        type: integer
+      payment_date:
+        type: string
+      total_price:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  domain.OrderRequest:
+    properties:
+      cancel_reason:
+        type: string
+      created_at:
+        type: string
+      merchant_id:
+        type: integer
+      notes:
+        type: string
+      order_date:
+        type: string
+      order_no:
+        type: string
+      order_status_id:
+        type: integer
+      payment_date:
+        type: string
+      total_price:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
   domain.RegisterRequest:
     properties:
       confirm_password:
@@ -87,6 +187,315 @@ paths:
       summary: Login
       tags:
       - User
+  /api/v1/merchant:
+    get:
+      consumes:
+      - application/json
+      description: Get All Merchant
+      parameters:
+      - in: query
+        name: address
+        type: string
+      - in: query
+        name: coordinate
+        type: string
+      - in: query
+        name: created_at
+        type: string
+      - in: query
+        name: is_active
+        type: integer
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: name
+        type: string
+      - in: query
+        name: order_by
+        type: string
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: phone_number
+        type: string
+      - in: query
+        name: picture
+        type: string
+      - in: query
+        name: score
+        type: number
+      - in: query
+        name: sort_by
+        type: string
+      - in: query
+        name: updated_at
+        type: string
+      - in: query
+        name: user_id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.MerchantData'
+              type: object
+      summary: Get All Merchant
+      tags:
+      - Merchant
+    post:
+      consumes:
+      - application/json
+      description: Create Merchant
+      parameters:
+      - description: ' MerchantRequest Schema '
+        in: body
+        name: MerchantRequest
+        required: true
+        schema:
+          $ref: '#/definitions/domain.MerchantRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.MerchantData'
+              type: object
+      summary: Create Merchant
+      tags:
+      - Merchant
+  /api/v1/merchant/{merchant_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Detail Merchant
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' Merchant Id '
+        in: path
+        name: merchant_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.MerchantData'
+              type: object
+      summary: Get Detail Merchant
+      tags:
+      - Merchant
+    post:
+      consumes:
+      - application/json
+      description: Update Merchant
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' Merchant Id '
+        in: path
+        name: merchant_id
+        required: true
+        type: string
+      - description: ' MerchantData Schema '
+        in: body
+        name: MerchantData
+        required: true
+        schema:
+          $ref: '#/definitions/domain.MerchantData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Response'
+      summary: Update Merchant
+      tags:
+      - Merchant
+  /api/v1/order:
+    get:
+      consumes:
+      - application/json
+      description: Get All Order
+      parameters:
+      - in: query
+        name: cancel_reason
+        type: string
+      - in: query
+        name: created_at
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: merchant_id
+        type: integer
+      - in: query
+        name: notes
+        type: string
+      - in: query
+        name: order_by
+        type: string
+      - in: query
+        name: order_date
+        type: string
+      - in: query
+        name: order_no
+        type: string
+      - in: query
+        name: order_status_id
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: payment_date
+        type: string
+      - in: query
+        name: sort_by
+        type: string
+      - in: query
+        name: total_price
+        type: integer
+      - in: query
+        name: updated_at
+        type: string
+      - in: query
+        name: user_id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.OrderData'
+              type: object
+      summary: Get All Order
+      tags:
+      - Order
+    post:
+      consumes:
+      - application/json
+      description: Create Order
+      parameters:
+      - description: ' OrderRequest Schema '
+        in: body
+        name: OrderRequest
+        required: true
+        schema:
+          $ref: '#/definitions/domain.OrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.OrderData'
+              type: object
+      summary: Create Order
+      tags:
+      - Order
+  /api/v1/order/{order_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Detail Order
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' Order Id '
+        in: path
+        name: order_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.OrderData'
+              type: object
+      summary: Get Detail Order
+      tags:
+      - Order
+    post:
+      consumes:
+      - application/json
+      description: Update Order
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ' Order Id '
+        in: path
+        name: order_id
+        required: true
+        type: string
+      - description: ' OrderData Schema '
+        in: body
+        name: OrderData
+        required: true
+        schema:
+          $ref: '#/definitions/domain.OrderData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Response'
+      summary: Update Order
+      tags:
+      - Order
   /api/v1/register:
     post:
       consumes:
