# domain/response.go
@@ -5,3 +5,10 @@ type Response struct {
 	Message     string `json:"message"`
 	ElapsedTime string `json:"elapsed_time"`
 }
+
+type FilterRequest struct {
+	Page    int    `json:"page" form:"page" gorm:"default:1"`
+	Limit   int    `json:"limit" form:"limit" gorm:"default:20"`
+	OrderBy string `json:"order_by" form:"order_by"`
+	SortBy  string `json:"sort_by" form:"sort_by"`
+}
